--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 </head>
 <body>
     <div class="container">
-        <button class="button">Tell me a Joke!</button>
+        <video autoplay muted loop id="background-video">
+            <source src="eva.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
+        <button class="button">don't nigga rei will tell you a bad joke</button>
         <audio id="audio" hidden></audio>
     </div>
     <!-- Script -->
